[gd_scene load_steps=20 format=3 uid="uid://bpy7jhqrjcqct"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_n7wap"]
[ext_resource type="Theme" uid="uid://cabtixgd4hd3m" path="res://theme.tres" id="2_d50k6"]
[ext_resource type="Script" path="res://UI/health_bar.gd" id="2_dkqm6"]
[ext_resource type="Texture2D" uid="uid://dcmujguw5ei6t" path="res://assets/sprites/coins/big gold coin.png" id="2_ffmui"]
[ext_resource type="Texture2D" uid="uid://lv0g6t3bhk0j" path="res://assets/sprites/ui_pack/04.png" id="3_l1x7b"]
[ext_resource type="Texture2D" uid="uid://bh66n2gtoe5dh" path="res://assets/sprites/potions_assets_pack/Potions Assets Pack - 32x32.png" id="3_y22ws"]
[ext_resource type="Texture2D" uid="uid://cmu2s83uyllyf" path="res://assets/sprites/metal_icons/steel.png" id="4_es6jx"]
[ext_resource type="Shader" path="res://shaders/shine_potion.gdshader" id="5_heekm"]
[ext_resource type="Texture2D" uid="uid://4vvoiv715y74" path="res://assets/sprites/metal_icons/iron.png" id="5_vwq0f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0eyso"]
bg_color = Color(0.389287, 0.389287, 0.389286, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e10me"]
bg_color = Color(0.895705, 0.675064, 0.0561031, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xuy7k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqye1"]
bg_color = Color(0.987189, 0.028095, 1.34766e-06, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbymy"]
atlas = ExtResource("3_l1x7b")
region = Rect2(0, 3, 113, 37)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2bkh"]
bg_color = Color(0.188371, 0.188371, 0.188371, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oe62m"]
bg_color = Color(0.364706, 0.545098, 0.701961, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qktls"]
shader = ExtResource("5_heekm")
shader_parameter/size_effect = 1.0
shader_parameter/speed = -0.1
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = false
shader_parameter/pause_duration = 0.2
shader_parameter/texture_size = Vector2(256, 256)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o8dn8"]
load_path = "res://.godot/imported/potions.png-9450ab7863ce399218ea8ce81fb26ed6.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_itsk6"]
shader = ExtResource("5_heekm")
shader_parameter/size_effect = 1.0
shader_parameter/speed = -0.1
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = false
shader_parameter/pause_duration = 0.2
shader_parameter/texture_size = Vector2(256, 256)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_n7wap")

[node name="Stats" type="VBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 207.0
offset_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Health" type="CenterContainer" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("2_dkqm6")

[node name="WaitTimeBottomBar" type="Timer" parent="Stats/Health"]
one_shot = true

[node name="HealthBarBottom" type="ProgressBar" parent="Stats/Health"]
custom_minimum_size = Vector2(150, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0eyso")
theme_override_styles/fill = SubResource("StyleBoxFlat_e10me")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="HealthBarTop" type="ProgressBar" parent="Stats/Health"]
custom_minimum_size = Vector2(150, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_xuy7k")
theme_override_styles/fill = SubResource("StyleBoxFlat_rqye1")
step = 1.0
value = 90.0
show_percentage = false

[node name="NinePatchRect" type="NinePatchRect" parent="Stats/Health"]
custom_minimum_size = Vector2(158, 10)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_dbymy")
region_rect = Rect2(0, 0, 48, 11)
patch_margin_left = 6
patch_margin_top = 4
patch_margin_right = 6
patch_margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = -2

[node name="TextureRect2" type="TextureRect" parent="Stats/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_es6jx")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="Stats/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_vwq0f")
expand_mode = 2

[node name="ProgressBar1" type="Control" parent="Stats/HBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="CenterContainer" parent="Stats/HBoxContainer/ProgressBar1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -5.0
offset_right = 42.0
offset_bottom = 26.0
grow_vertical = 2
rotation = 1.5708
size_flags_horizontal = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Stats/HBoxContainer/ProgressBar1/ProgressBar"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
texture = ExtResource("3_l1x7b")
region_rect = Rect2(19, 201, 10, 29)
patch_margin_left = 4
patch_margin_top = 6
patch_margin_right = 5
patch_margin_bottom = 7

[node name="ProgressBar" type="ProgressBar" parent="Stats/HBoxContainer/ProgressBar1/ProgressBar"]
custom_minimum_size = Vector2(3, 29)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_s2bkh")
theme_override_styles/fill = SubResource("StyleBoxFlat_oe62m")
step = 1.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="CoinsContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(18, 306)

[node name="CoinsLabel" type="Label" parent="CoinsContainer"]
offset_left = 8.0
offset_top = -4.0
offset_right = 16.0
offset_bottom = 3.0
size_flags_horizontal = 8
theme = ExtResource("2_d50k6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"

[node name="BigGoldCoin" type="Sprite2D" parent="CoinsContainer"]
scale = Vector2(1.75, 1.75)
texture = ExtResource("2_ffmui")
region_enabled = true
region_rect = Rect2(4, 4, 7, 7)

[node name="PotionsCointainer" type="Node2D" parent="."]
position = Vector2(18, 336)

[node name="EmptyPotion1" type="Sprite2D" parent="PotionsCointainer"]
texture = ExtResource("3_y22ws")
region_enabled = true
region_rect = Rect2(44, 99, 8, 27)

[node name="PotionBlue" type="Sprite2D" parent="PotionsCointainer/EmptyPotion1"]
material = SubResource("ShaderMaterial_qktls")
texture = SubResource("CompressedTexture2D_o8dn8")
region_enabled = true
region_rect = Rect2(269, 101, 8, 27)

[node name="PotionLabel" type="Label" parent="PotionsCointainer/EmptyPotion1"]
visible = false
offset_left = -3.0
offset_top = 14.0
offset_right = 5.0
offset_bottom = 22.0
size_flags_horizontal = 8
theme = ExtResource("2_d50k6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1"

[node name="EmptyPotion2" type="Sprite2D" parent="PotionsCointainer"]
position = Vector2(16, 0)
texture = ExtResource("3_y22ws")
region_enabled = true
region_rect = Rect2(44, 99, 8, 27)

[node name="PotionRed" type="Sprite2D" parent="PotionsCointainer/EmptyPotion2"]
material = SubResource("ShaderMaterial_itsk6")
texture = ExtResource("3_y22ws")
region_enabled = true
region_rect = Rect2(76, 99, 8, 27)

[node name="EmptyPotion3" type="Sprite2D" parent="PotionsCointainer"]
position = Vector2(32, 0)
texture = ExtResource("3_y22ws")
region_enabled = true
region_rect = Rect2(44, 99, 8, 27)

[connection signal="timeout" from="Stats/Health/WaitTimeBottomBar" to="Stats/Health" method="_on_wait_time_bottom_bar_timeout"]
